cmake_minimum_required(VERSION 3.0)
project(PGTEST)

add_executable(pgtest main.c)
set(ENV{PKG_CONFIG_PATH} "$ENV{PKG_CONFIG_PATH}:/usr/local/opt/postgresql@9.6/lib/pkgconfig")
find_package(PkgConfig)
if (PKG_CONFIG_FOUND)
  pkg_check_modules(_LIBPQ libpq)
endif(PKG_CONFIG_FOUND)
if (_LIBPQ_FOUND)
  MESSAGE("Libpq will found ok !!!")
  include_directories(${_LIBPQ_INCLUDE_DIRS})
  target_link_libraries(pgtest ${_LIBPQ_LIBRARIES})
endif(_LIBQ_FOUND)
# find_package(PostgreSQL REQUIRED)
# if (PostgreSQL_FOUND)
#   include_directories(${PostgreSQL_INCLUDE_DIRS})
#   target_link_libraries(pgtest ${PostgreSQL_LIBRARIES})
# else()
#   MESSAGE(FATAL_ERROR "Postgresql library is not found.")
# endif(PostgreSQL_FOUND)

target_link_libraries(pgtest ${LIBS})
